--- a/_scss/components/_text_blocks.scss
+++ b/_scss/components/_text_blocks.scss
@@ -12,18 +12,12 @@
   @extend .editorial-text;
 }
 
-.intro {
-  @extend .epsilon;
-  @include font-weight(medium);
-  color: $color-dark;
-}
-
 .sidenote {
   @extend .small;
   @include font-weight(normal);
-  font-style: normal;
   color: $color-dark;
   display: inline-block;
+  font-style: normal;
   line-height: 1.5;
 }
 
