--- a/_scss/pages/_landing.scss
+++ b/_scss/pages/_landing.scss
@@ -179,15 +179,18 @@ $hero-animation-delay: 2.5s;
   margin: 20px -15px -20px;
 
   img {
-    margin: 10px 15px;
     transform: scale(.9);
   }
 
-  @media (max-width: $bp-med-large) {
+  @media (max-width: $bp-med) {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 33em;
+
+    img {
+      margin: 10px;
+    }
   }
 
   @media (max-width: $bp-small-2) {
